# pyLEK

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  python.gitignore  requirements.txt  setup.cfg  setup.py
helpers/: README.md  animation.py  csvEditor.py  deprecated.py  filemanager.py  generalMath.py  kwargs.py  matlab.py  pyExtras.py  txtEditor.py
info/: exlude
inkscape/: DropInkscape_v0_92_png.bat  DropInkscape_v1_02_pdftex.bat  DropInkscape_v1_02_png.bat  README.md
plotters/: .gitignore  README.md  mergePicklePlots.py  plot1D.py  plot2D.py  plot3D_surf.py  plot3D_trisurf.py  plot4D_surf.py  plotBarChart.py  plotHelpers.py  plotPieChart.py  plotScatter.py  plotSize.py  pythonHelperPlot2DStyle.py
plotters/mplstyles/: plot2Ddefault.mplstyle
plotters/plotStyle/: _1D.mplstyle  _barchart_h.mplstyle  _scatter.mplstyle  barchart.mplstyle  barchart_horizontal.mplstyle  colorCycler.py  custom.mplstyle  default.mplstyle  mplStyle.py  piechart.mplstyle
pyLEK/: __init__.py
pyLEK/helpers/: README.md  filemanager.py  kwargschecker.py  pyExtras.py  sphinx.mustache  txtEditor.py
pyLEK/inkscape/: README.md
pyLEK/plotters/: .gitignore  README.md  plot2D.py  plot3D_trisurf.py  plotBarChart.py
pyLEK/plotters/plotStyle/: _2D.mplstyle  _3D.mplstyle  _barchart_v.mplstyle  colorCycler.py  mplStyle.py
pyLEK/sampleCode/: README.md  __main__.py
pyLEK/sampleCode/gui/: README.md  qtHelpers.py
pyLEK/snippets/: py-base.code-snippets
sampleCode/: .gitignore  README.md  __main__.py
sampleCode/foo/bar/: someCode.py  somePlot.py
sampleCode/gui/: README.md  app_framework.py  mainwindow.py  mainwindow.ui  materials.csv  mplwidget.py  pdHelpers.py  qtHelpers.py
sampleCode/plotStyle/: .gitignore  _myStyle.mplstyle
sampleRepo/: TODO.md  __main__.py
snippets/: py-templates.code-snippets
(+1 files in other folders)
