[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLEK"
version = "0.2.0"
description = "Utilities for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "benedikt strahm", email = "benedikt.strahm@ilek.uni-stuttgart.de" }]
urls = { Homepage = "https://github.com/BeneStrahm/pyLEK", Source = "https://github.com/BeneStrahm/pyLEK" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cycler>=0.10.0",
    "imageio>=2.22.0",
    "matplotlib>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.2.3",
    "pick>=2.4.0",
    "PyQt5>=5.15.11",
    "scipy>=1.16.3",
    "seaborn>=0.13.1",
]

[tool.setuptools]
include-package-data = true
packages = ["pyLEK"]

[tool.setuptools.package-data]
pyLEK = [
    "*.json", "*.csv", "*.txt", "*.md", "*.yml", "*.yaml", "*.ini", "*.cfg", "*.npz", "*.npy", "*.mplstyle", "*.mustache"
]