[metadata]
name = pyLEK
version = 0.2.0
description = Utilities for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = benedikt strahm
author_email = benedikt.strahm@ilek.uni-stuttgart.de
url = https://github.com/BeneStrahm/pyLEK
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/BeneStrahm/pyLEK

[options]
packages = find:
python_requires = >=3.11
include_package_data = True